# nova-renderer

./: .build-py  .clang-format  .clang-tidy  .clang-tidy-list.txt  .classpath  .directory  .gitattributes  .gitignore  .gitmodules  .project  .travis.yml  1.10 - Nova.json  1.10-Nova.json  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  LICENSE  README.md  appveyor.yml  build.gradle  build.py  check_vulkan.cmake  gradle.properties  jenkins.sh  nOVA.DotSettings  nova-msvc.cap  nova-native.gradle  nova.cmd  nova.log.sorted  nova.ps1  nova.sh  output.txt  readme.md  renderdoc-linux.cap  renderdoc.cap  settings.gradle  setup-linux.sh  setup-windows.ps1  setup.gradle  setup.ps1  (+3 more)
apps/shader_compiler/: CMakeLists.txt
apps/shader_compiler/src/: main.cpp  shader_includer.cpp  shader_includer.hpp
libs/ntl/: CMakeLists.txt  README.md
libs/ntl/include/ntl/: result.hpp  vector.hpp
native/: .clang-format  .gitignore  CMakeLists.txt  setup-build.py
native/mc_interface/: nova_mc_interface.cpp
native/mc_interface/jni/: com_continuum_nova_system_NovaNative.h
native/src/: .gitignore  CMakeLists.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  dummy.cpp  nova_renderer.cpp  nova_renderer.h  nova_renderer.hpp  platform.hpp  settings.cpp
native/src/Platform/: Windows.cmake
native/src/api_specific/vulkan/: timestamp_query_pool.cpp  vulkan_render_device.cpp  vulkan_render_device.h
native/src/data_loading/: direct_buffers.h
native/src/data_loading/loaders/: shader_file_loading.cpp  shader_loading.cpp
native/src/dx12/: win32_window.cpp  win32_window.hpp
native/src/fs_access/: folder_accessor.cpp  folder_accessor.h  regular_folder_accessor.cpp  regular_folder_accessor.h  regular_folder_accessor.hpp  zip_folder_accessor.cpp  zip_folder_accessor.h  zip_folder_accessor.hpp
native/src/input/: InputHandler.cpp  input_handler.cpp  input_handler.hpp
native/src/loading/: folder_accessor.cpp  folder_accessor.hpp  json_utils.cpp  json_utils.hpp  loading_utils.cpp  loading_utils.hpp  regular_folder_accessor.cpp  regular_folder_accessor.hpp  shaderpack-data.cpp  shaderpack_data.cpp  shaderpack_data.hpp  shaderpack_loading.cpp  shaderpack_loading.hpp  utils.cpp  utils.hpp  zip_folder_accessor.cpp  zip_folder_accessor.hpp
native/src/loading/shaderpack/: json_interop.cpp  json_interop.hpp  render_graph_builder.cpp  render_graph_builder.hpp  shaderpack_data.cpp  shaderpack_data.hpp  shaderpack_loading.cpp  shaderpack_loading.hpp  shaderpack_validator.cpp  shaderpack_validator.hpp
native/src/mc_interface/: mc_interface_dump.h  mc_objects.cpp  mc_objects.h  nova.h  nova_facade.cpp  nova_jni.h  nova_mc_interface.cpp  nova_mc_interface.h
native/src/mc_interface/jni/: com_continuum_nova_system_NovaNative.h  com_continuum_nova_system_NovaNative_GeometryType.h  com_continuum_nova_system_NovaNative_NativeBoolean.h  com_continuum_nova_system_NovaNative_NovaVertexFormat.h  com_continuum_nova_system_NovaNative_key_char_event.h  com_continuum_nova_system_NovaNative_key_press_event.h  com_continuum_nova_system_NovaNative_mc_atlas_texture.h  com_continuum_nova_system_NovaNative_mc_chunk_render_object.h  com_continuum_nova_system_NovaNative_mc_gui_buffer.h  com_continuum_nova_system_NovaNative_mc_settings.h  com_continuum_nova_system_NovaNative_mc_texture_atlas_location.h  com_continuum_nova_system_NovaNative_mouse_button_event.h  com_continuum_nova_system_NovaNative_mouse_position_event.h  com_continuum_nova_system_NovaNative_mouse_scroll_event.h  com_continuum_nova_system_NovaNative_window_size.h
native/src/render/: nova_renderer.cpp  nova_renderer.h  render_graph.cpp  swapchain_manager.cpp  swapchain_manager.h
native/src/render/objects/: camera.cpp  render_object.cpp  render_object.h
native/src/render/vulkan/: command_pool.cpp  command_pool.h  render_context.cpp  render_context.h
native/src/render/windowing/: glfw_vk_window.cpp  glfw_vk_window.h
native/src/render_context/: platform.h
native/src/render_engine/: command_buffer.cpp  command_buffer.hpp  command_buffer_base.cpp  command_buffer_base.hpp  render_engine.hpp  resource_barrier.hpp  window.hpp
native/src/render_objects/: render_object.cpp  render_object.hpp
native/src/settings/: nova_settings.cpp  nova_settings.hpp  settings.cpp  settings.hpp
native/src/test/: main.cpp
native/src/util/: logger.cpp  logger.hpp  macros.hpp  smart_enum.hpp  utils.cpp  utils.hpp  windows_utils.cpp  windows_utils.hpp
native/src/utils/: command_buffer_watchdog.cpp  command_buffer_watchdog.h  crash_handler.cpp  crash_handler.h  io.h  utils.cpp
native/src/vulkan/: glfw_window.cpp  glfw_window.hpp  per_thread_data.cpp  per_thread_data.hpp  vulkan_render_device.cpp  vulkan_render_device.h  vulkan_render_device.hpp
native/tests/: CMakeLists.txt
native/tests/resources/: gbuffers_terrain.0.spirv.generated  gbuffers_terrain.4.spirv.generated  gui.0.spirv.generated  gui.4.spirv.generated  image_passthrough.4.spirv.generated  textured_unlit.0.spirv.generated
native/tests/src/: basic_vulkan_tests.cpp  end_to_end_runner.cpp  filesystem_test.cpp  general_test_setup.hpp  shaderpack_loading_test.cpp  triangle.frag  triangle.vert
native/toolchains/: macos-x86_64.cmake  vulkan_library.cmake
src/main/cpp/: '  .gitignore  CMakeLists.txt  CMakeSettings.json  gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc  notes_on_renderer  nova_renderer.cpp  nova_renderer.h  renderer.cbp
src/native/: .gitignore  CMakeLists.txt  makefile
src/native/shaders/: alpha_test.glsl
src/native/src/: CMakeLists.txt  SourceFiles.cmake  main.cpp  nova_renderer.def
src/native/test/: CMakeLists.txt  main.cpp  shader_test.cpp  shader_test.h  test_utils.cpp
src/native/vulkan_mod/: graphics_object_factory.cpp  itexture.cpp  ivertex_buffer.cpp  ivertex_buffer.h  mc_chunk.h  mc_entity.cpp  render_data_store.h  renderer.cpp  renderer.h  time.cpp  time.h
tests/: .clang-tidy  .clang-tidy-list.txt  CMakeLists.txt
tests/src/: end_to_end_runner.cpp  general_test_setup.hpp
tests/unit_tests/: main.cpp
tests/unit_tests/loading/: filesystem_test.cpp
(+2535 files in other folders)
